Refactoring to new scheduler and singltoning mongo + scheduler

--- a/.config
+++ b/.config
@@ -1,9 +1,9 @@
 [development]
-node0 = {'host': 'node0', 'port': 8080, 'name': 'yo mama\'s node'}
+node0 = {'ip': 'node0', 'port': 8000, 'name': 'yo mama\'s node'}
 
 [production]
-node1 = {'host': 'prod-host1', 'port': 9090, 'username': 'user_prod1', 'password': 'prod_pass1'}
-node2 = {'host': 'prod-host2', 'port': 9091, 'username': 'user_prod2', 'password': 'prod_pass2'}
+node1 = {'ip': 'prod-host1', 'port': 9090, 'username': 'user_prod1', 'password': 'prod_pass1'}
+node2 = {'ip': 'prod-host2', 'port': 9091, 'username': 'user_prod2', 'password': 'prod_pass2'}
 
 [backend]
 port = 8000
