--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ httpx = "*"
 schedule = "*"
 pydantic = "==1.10.13"
 apscheduler = {extras = ["mongoengine"], version = "*"}
+docker = "*"
 
 [dev-packages]
 
