Updating docker file stuff

--- a/.docker.env
+++ b/.docker.env
@@ -8,5 +8,9 @@ PIPENV_VENV_IN_PROJECT=1
 # Mongodb
 MONGO_TABLE=Bitorch
 
-# Docker compose:
-MONGO_URL=mongodb://mongo:27017
+# MongoDB Config
+MONGO_URL=mongodb://mongo
+MONGO_USER=user
+MONGO_PASSWORD=password
+MAX_CONNECTIONS_COUNT=10
+MIN_CONNECTIONS_COUNT=3
