--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -11,7 +11,7 @@ name: bitorch-development
 services:
   peer0:
     container_name: peer0
-    command: pipenv run python run.py
+    command: /bin/sh -c "env && pipenv run python run.py"
     build:
       context: .
       dockerfile: dev.dockerfile
@@ -31,8 +31,8 @@ services:
     environment:
       - PEER_NAME=peer0
       - BACKEND_PORT=8000
+      # Set db here so that we can simulate multiple nodes with a single mongodb container with their own db's:
       - DB_NAME=peer0
-      - MONGO_URI=mongodb://mongodb:27017/peer0
     stdin_open: true
     tty: true
     depends_on:
