Fixing mongodb docker container connection issue

--- a/.docker.env
+++ b/.docker.env
@@ -5,11 +5,8 @@ BACKEND_PORT=8000 # External backend port exposed to the internet
 # Store pipenv .venv folder in currnet dir
 PIPENV_VENV_IN_PROJECT=1
 
-# Mongodb
-MONGO_TABLE=Bitorch
-
-# MongoDB Config
-MONGO_URL=mongodb://mongo
+# MongoDB
+MONGO_URL=mongodb://mongodb:27017/
 MONGO_USER=user
 MONGO_PASSWORD=password
 MAX_CONNECTIONS_COUNT=10
