updating env files

--- a/.docker.env
+++ b/.docker.env
@@ -7,7 +7,16 @@ PIPENV_VENV_IN_PROJECT=1
 
 # MongoDB
 MONGO_URL=mongodb://mongodb:27017/
-MONGO_USER=user
-MONGO_PASSWORD=password
-MAX_CONNECTIONS_COUNT=10
-MIN_CONNECTIONS_COUNT=3
+# DB_NAME=bitorch
+
+# Number of peers to share when requesting update_peer_list
+# Set to 0 for none, -1 for all, and a specific integer for
+# a value to share like 50.
+SHARE_PEERS=-1
+
+# Max number of peers to connect to and maintain connection with.
+MAX_DEPTH=100
+
+# A name to easily identify your peer.
+# This is NOT a unique identifier for your peer.
+PEER_NAME=peer0
