--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,22 @@
 ENV=development
 BACKEND_URL=http://0.0.0.0:8000
+BACKEND_PORT=8000 # External backend port exposed to the internet
+
+# Store pipenv .venv folder in currnet dir
+PIPENV_VENV_IN_PROJECT=1
+
+# MongoDB:
+MONGO_URL=localhost:27017
+DB_NAME=bitorch
+
+# Number of peers to share when requesting update_peer_list
+# Set to 0 for none, -1 for all, and a specific integer for
+# a value to share like 50.
+SHARE_PEERS=-1
+
+# Max number of peers to connect to and maintain connection with.
+MAX_DEPTH=100
+
+# A name to easily identify your peer.
+# This is NOT a unique identifier for your peer.
+PEER_NAME=peer0
