--- a/.config.json
+++ b/.config.json
@@ -3,21 +3,19 @@
         {
             "ip": "peer0",
             "port": 8000,
-            "name": "yo mama's peer"
+            "name": "yo mamas peer"
         }
     ],
     "production": [
         {
             "ip": "prod-host1",
             "port": 9090,
-            "username": "user_prod1",
-            "password": "prod_pass1"
+            "name": "prod_host1"
         },
         {
             "ip": "prod-host2",
             "port": 9091,
-            "username": "user_prod2",
-            "password": "prod_pass2"
+            "name": "prod_host1"
         }
     ]
 }
