--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -23,6 +23,7 @@ services:
           ignore:
             - ./.venv
             - ./.env
+            - ./backend/models
         - action: rebuild
           path: ./Pipfile
     ports:
@@ -53,6 +54,7 @@ services:
           ignore:
             - ./.venv
             - ./.env
+            - ./backend/models
         - action: rebuild
           path: ./Pipfile
     ports:
