--- a/Pipfile
+++ b/Pipfile
@@ -4,20 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
 uvicorn = "*"
-requests = "*"
+fastapi = "*"
 python-dotenv = "*"
-libtorrent = "*"
-motor = "*"
+bson = "*"
 httpx = "*"
-schedule = "*"
-pydantic = "==1.10.13"
+pydantic = "~=1.10.13"
+gpt4all = "*"
+python-multipart = "*"
 apscheduler = {extras = ["mongoengine"], version = "*"}
-docker = "*"
-watchdog = "*"
+motor = "*"
+exceptiongroup = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10.11"
+python_version = "3.10"
