--- a/.gitignore
+++ b/.gitignore
@@ -225,4 +225,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-/backend/models
+/models
