Adding inference_test gradio ui

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ python-multipart = "*"
 apscheduler = {extras = ["mongoengine"], version = "*"}
 motor = "*"
 exceptiongroup = "*"
+gradio = "*"
 
 [dev-packages]
 
