--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -15,21 +15,10 @@ services:
     build:
       context: .
       dockerfile: dev.dockerfile
-    develop:
-      watch:
-        - action: sync
-          path: ./
-          target: /Bitorch
-          ignore:
-            - ./.venv
-            - ./.env
-            - ./models
-        - action: rebuild
-          path: ./Pipfile
     ports:
       - "8000:8000"
     env_file:
-      - .docker.env
+      - .env
     environment:
       - PEER_NAME=peer0
       - BACKEND_PORT=8000
