--- a/.config.json
+++ b/.config.json
@@ -7,5 +7,10 @@
         }
     ],
     "production": [
+        {
+            "ip": "3.19.76.18",
+            "port": 8000,
+            "name": "bitorch seed peer"
+        }
     ]
 }
